# DADOS_ATIVOS

./: ATIVOS_IBOV.csv  README.md  Sematiza.py  Sematiza_Ajustador.py  Sematiza_Alertador.py  Sematiza_ConcatenaTrocaDeTicker.py  Sematiza_TempoGrafico.py  ajustador.py  alertador.py  ativos-mudaram-ticker.json  dados-interesse.json  feriados-b3.json  log-desempenho-alertador.txt  log-desempenho.txt  main.py  muda_nome.py  pyproject.toml  requirements.txt  sematiza.py  sematiza1.py  teste.py
Sematiza-Core/sematiza/: Sematiza_TempoGrafico.py
Sematiza-Core/sematiza/config/: settings.py
Sematiza_Core/log/: log-desempenho-alertador.txt
Sematiza_Core/sematiza/: Sematiza_Alertador.py
config/: settings.py
códigos-antigos/: alertador.py
log/: log-concatena-ativos.txt  log-desempenho-alertador.txt  log-desempenho-main.txt
scripts/: ativos_unique_ibov.py
sematiza/: Sematiza_Ajustador.py  Sematiza_Alertador.py  Sematiza_ConcatenaTrocaDeTicker.py
utils/: log.py  log_sematiza.py
