[tool.poetry]
name = "sematiza"
version = "0.1.0"
description = ""
authors = ["Vitor Kruel <93736784+VitorKruel102@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
